--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -13,18 +13,36 @@ environment:
   SNAPCRAFT_ENABLE_DEVELOPER_DEBUG: "yes"
 
 apps:
+  mongo:
+    command: env LC_ALL=C mongod --bind_ip 0.0.0.0 --port=27017 --pidfilepath $SNAP_USER_DATA/mongod.pid --journal --dbpath $SNAP_USER_DATA/mongo
+    daemon: simple
+
   kernel:
-    command: sh -c "nohup node $SNAP/kernel/bin/server.js > /dev/null 2>&1 &"
-    plugs: [home, network, network-bind]
+    command: node $SNAP/kernel/bin/server.js > $SNAP_USER_DATA/kernel.log 2>&1
+    daemon: simple
   
   api:
-    command: sh -c "nohup node $SNAP/api/bin/server.js > /dev/null 2>&1 &"
+    command: node $SNAP/api/bin/server.js > $SNAP_USER_DATA/api.log 2>&1
+    daemon: simple
+  
+  backup:
+    command: mongodump --db ecattle-kernel --archive
+
+hooks:
+  install:
     plugs: [home, network, network-bind]
+
+plugs:
+  home:
+  network:
+  network-bind:
 
 parts:
   kernel:
     plugin: nodejs
     nodejs-package-manager: npm
+    stage-packages:
+      - mongodb-server
     source: https://github.com/e-cattle/kernel.git
     source-branch: master
     source-depth: 1
@@ -38,7 +56,7 @@ parts:
       package-lock.json: package-lock.json-kernel
     override-build: |
       snapcraftctl build
-      echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/kernel"
+      echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/kernel..."
       mkdir -p $SNAPCRAFT_PART_INSTALL/kernel
       mv * $SNAPCRAFT_PART_INSTALL/kernel/
   
@@ -50,7 +68,7 @@ parts:
     source-depth: 1
     override-build: |
       snapcraftctl build
-      echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/api"
+      echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/api..."
       mkdir -p $SNAPCRAFT_PART_INSTALL/api
       mv * $SNAPCRAFT_PART_INSTALL/api/
   
