Pequenos ajustes no build.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -18,11 +18,11 @@ apps:
     daemon: simple
 
   kernel:
-    command: node $SNAP/kernel/bin/server.js > $SNAP_USER_DATA/kernel.log 2>&1
+    command: node $SNAP/kernel/bin/server.js > $SNAP_USER_DATA/kernel.log
     daemon: simple
   
   api:
-    command: node $SNAP/api/bin/server.js > $SNAP_USER_DATA/api.log 2>&1
+    command: node $SNAP/api/bin/server.js > $SNAP_USER_DATA/api.log
     daemon: simple
   
 #  backup:
@@ -58,7 +58,8 @@ parts:
       snapcraftctl build
       echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/kernel..."
       mkdir -p $SNAPCRAFT_PART_INSTALL/kernel
-      mv * $SNAPCRAFT_PART_INSTALL/kernel/
+      cp -r * $SNAPCRAFT_PART_INSTALL/kernel/
+      rm -rf * > /dev/null
   
   api:
     plugin: nodejs
@@ -66,11 +67,20 @@ parts:
     source: https://github.com/e-cattle/api.git
     source-branch: master
     source-depth: 1
+    filesets:
+      exclude: [-src,-bin,-node_modules,-package]
+    stage: [$exclude]
+    prime: [$exclude]
+    organize:
+      README.md: README.md-api
+      package.json: package.json-api
+      package-lock.json: package-lock.json-api
     override-build: |
       snapcraftctl build
       echo "Moving from $(pwd) to $SNAPCRAFT_PART_INSTALL/api..."
       mkdir -p $SNAPCRAFT_PART_INSTALL/api
-      mv * $SNAPCRAFT_PART_INSTALL/api/
+      cp -r * $SNAPCRAFT_PART_INSTALL/api/
+      rm -rf *  > /dev/null
   
 #  manager:
 #    plugin: nodejs
